[tool.poetry]
name = "cloud-python"
version = "0.1.0"
description = ""
authors = ["theo chang <theo.chang@mile.cloud>"]
readme = "README.md"
packages = [{include = "cloud_python"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.26.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
